# sc_classification

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  DOWNSTREAM_ANALYSIS_GUIDE.md  README.md  README_STANDARDIZED_WORKFLOW.md  REPO_ORGANIZATION.md  aug19_rep_learn_supervised_filtering.py  aug21_rep_learning_with_cv.py  pyproject.toml  run_FA_internal_CV_pipeline.py  run_analysis.py  run_fa_r_test_pipeline.py  run_nmf_pipeline.py
classification_methods/: base.py  lr_lasso.py
dimension_reduction/: base.py  factor_analysis.py  factor_analysis_R.py  nmf.py
docs/: AUTONOMOUS_COMPREHENSIVE_RUNS.md  GITHUB_UPDATE_PLAYBOOK.md  STAGED_COMMIT_PLAN_20260216.md
evaluation/: FA_result_eval.ipynb  LR_visualization.py  QE_mrd_classify_summary_plot.ipynb  association_of_surface_marker_jun20.ipynb
evaluation/experiments_eval/: active_factor_names_from_pan_patient_model.csv  aug15_kernel_crash_alt_analysis_script.py  aug20_kernel_crash_rerun.py  lr_lasso_cv_result.ipynb  lr_lasso_result_analysis.ipynb  per_lr_lasso_reg_strength_to_classification_inspection.ipynb
experiments/: RUN_MANIFEST_TEMPLATE.yaml
notebooks/: README.md  prep_data_for_factosig_Oct7_and_factoSig_result.ipynb  x_multiVI_LR_lasso.ipynb
pipeline/: all_patients_DR_classification.py  classify_lr_lasso_multiVI.py  pipeline_all_patient_FA_allNper_patient_LR.py  run_fa_lr_lasso_pipeline_downsampling_donor.py  standardized_pipeline.py
scripts/: factosig_volcano_plots.py  run_FA_internal_CV_pipeline.py  run_nmf_pipeline.py
utils/: experiment_analysis.py  experiment_manager.py  preprocessing.py
(+99 files in other folders)
